Replace image URLs with local files

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       <h2>Ma galerie</h2>
       <p>Voici quelques destination que j'apprécie :</p>
       <img
-        src="https://www.google.com/url?sa=i&url=https%3A%2F%2Ffr.freepik.com%2Fphotos%2Flondres&psig=AOvVaw1piLcdepk1tfD5HnQH1ATo&ust=1760789026913000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCIjuz7aYq5ADFQAAAAAdAAAAABAE"
+        src="FB_IMG_1651290122690.jpg"
         alt="Exemple d'image 1">
       <img
-        src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Ffr%2Fsearch%2Fbarcelona-background&psig=AOvVaw0buuN_RkTQ9EfnWPwoMOAa&ust=1760789116037000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCMCFz-CYq5ADFQAAAAAdAAAAABAE"
+        src="FB_IMG_1651290172168.jpg"
         alt="Exemple d'image 2">
       <img
-        src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstock.adobe.com%2Ffr%2Fsearch%3Fk%3Dtokyo%2Bjapan&psig=AOvVaw3Uyr10AMn6cjC3eKICAUAl&ust=1760789162434000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCNCjlPmYq5ADFQAAAAAdAAAAABAE"
+        src="Screenshot_20220429-000824_Facebook.jpg"
         alt="Exemple d'image 3">
     </section>
 
